[package]
name = "andre-wronscki-functions"
version = "0.1.0"
edition = "2021"
authors = ["Andre Wronscki <andrewronscki@gmail.com>"]
description = "Andre Wronscki package functions"
homepage = "https://andrewronscki.com"
repository = "https://andrewronscki.com"
documentation = "https://andrewronscki.com"
license = "MIT"

keywords = ["andre", "wronscki", "functions"]
categories = ["functions"]

[dependencies]
